chore: adjust navigation tab bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Maplenou</string>
-    <string name="menu_title_announcement">Announcement</string>
+    <string name="menu_title_announcement">Post</string>
     <string name="menu_title_favorite">Favorite</string>
     <string name="menu_title_add">Add</string>
     <string name="menu_title_message">Message</string>
