--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,10 @@
     <string name="menu_title_message">Message</string>
     <string name="menu_title_person">Person</string>
 
+    <!-- message text -->
+    <string name="message_network_error">No internet connection available</string>
+    <string name="message_empty_list">No item available</string>
+
     <!-- label text -->
     <string name="label_announcement_title">Title</string>
     <string name="label_announcement_price">1000 F CFA</string>
