--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,9 +16,12 @@
     <string name="label_announcement_category">Decoration</string>
     <string name="label_announcement_city">Lomé</string>
     <string name="label_announcement_creation_date">02/04/2019 à 23:45</string>
+    <string name="label_announcement_description">Description</string>
+    <string name="label_announcement_user">Kwami K.</string>
 
     <!-- image view content description text -->
     <string name="content_description_list_item_announcement_thumbnail">Announcement image</string>
+    <string name="content_description_list_item_announcement_images">Announcement images</string>
 
     <!-- date format -->
     <string name="date_format_simple_day">dd/mm/yyyy à hh:mm</string>
@@ -28,4 +31,11 @@
 
     <!-- currency -->
     <string name="currency_cfa">F CFA</string>
+
+    <string name="large_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+        anim id est laborum.</string>
 </resources>
