--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Maplenou</string>
     <string name="menu_title_announcement">Post</string>
     <string name="menu_title_favorite">Favorite</string>
+    <string name="menu_title_delete">Delete</string>
     <string name="menu_title_add">Add</string>
     <string name="menu_title_message">Message</string>
     <string name="menu_title_person">Person</string>
@@ -9,6 +10,7 @@
     <!-- message text -->
     <string name="message_network_error">No internet connection available</string>
     <string name="message_empty_list">No item available</string>
+    <string name="message_item_deleted">Annonce supprimé</string>
 
     <!-- label text -->
     <string name="label_announcement_title">Title</string>
@@ -57,4 +59,7 @@
         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
         anim id est laborum.
     </string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
