--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -62,6 +62,12 @@
     <string name="announcement_details_message_announcement_unsaved">Removed as favorite</string>
     <string name="announcement_details_message_announcement_saved">Add as favorite</string>
 
+    <!-- category -->
+    <string name="category_list_title">Categories</string>
+
+    <!-- city -->
+    <string name="city_list_title">Cities</string>
+
     <!-- favorite announcement -->
     <string name="announcement_favorite_announcement_list_title">Favorites</string>
 
