feat: add announcement creation
- include abstract feed back activity
- include abstract error feed back activity
- include abstract feedback fragment

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,6 +6,11 @@
     <string name="common_message_success">Success</string>
     <string name="common_icon_success_description">Success icon</string>
     <string name="common_network_error">Network error</string>
+    <string name="common_image_picker_title">Select picture</string>
+    <string name="common_understand">I understood</string>
+    <string name="common_success">Success</string>
+    <string name="common_failure">Failure</string>
+    <string name="common_required">Required</string>
 
     <string name="menu_title_announcement">Posts</string>
     <string name="menu_title_favorite">Favorite</string>
@@ -18,6 +23,9 @@
     <string name="message_network_error">No internet connection available</string>
     <string name="message_empty_list">No item available</string>
     <string name="message_item_deleted">Annonce supprimé</string>
+    <string name="message_image_source">Image Source</string>
+    <string name="message_choose_photo_from_gallery">Photo Gallery</string>
+    <string name="message_take_photo">Take a photo</string>
 
     <!-- account -->
     <string name="account_account_title">Account</string>
@@ -57,6 +65,9 @@
     <string name="announcement_creation_description_label">Description</string>
     <string name="announcement_creation_city_label">City</string>
     <string name="announcement_creation_localization_label">Localization</string>
+    <string name="announcement_creation_success_description">VYour announcement has been created successfully</string>
+    <string name="announcement_creation_city_required">You must choose a city</string>
+    <string name="announcement_creation_category_required">You must choose a category</string>
 
     <!-- announcement details -->
     <string name="announcement_details_message_announcement_unsaved">Removed as favorite</string>
@@ -75,6 +86,9 @@
     <string name="content_description_list_item_announcement_thumbnail">Announcement image</string>
     <string name="content_description_list_item_announcement_images">Announcement images</string>
 
+    <!-- http errors-->
+    <string name="http_error_505_message">Unknown inconnu</string>
+
     <!-- login -->
     <string name="login_login_title">Sign in</string>
     <string name="login_button_login_title">Login</string>
@@ -85,4 +99,13 @@
 
     <!-- message -->
     <string name="message_message_title">Messages</string>
+
+    <!-- permissions -->
+    <string name="permission_camera_explanation_message">
+        Maplenou needs access to your camera to take a picture.\nIf you agree, click on authorize on the next screen.
+    </string>
+    <string name="permission_gallery_explanation_message">
+        Maplenou needs to access your photo gallery to select a photo.\nIf you agree, click on authorize on the next screen.
+    </string>
+    <string name="permission_message_refused">Permission refused</string>
 </resources>
