--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="common_title_send_email">Envoyer un e-mail</string>
     <string name="common_title_send_sms">Envoyer un sms</string>
     <string name="common_title_make_call">Appeler</string>
+    <string name="common_title_search">Rechercher</string>
 
     <string name="app_name" translatable="false">Maplenou</string>
     <string name="menu_title_announcement">Announces</string>
@@ -24,6 +25,9 @@
     <string name="menu_title_add">Créer</string>
     <string name="menu_title_message">Messages</string>
     <string name="menu_title_person">Compte</string>
+
+    <!-- action -->
+    <string name="action_search">Rechercher</string>
 
     <!-- message text -->
     <string name="message_network_error">Aucune connexion internet disponible</string>
@@ -83,6 +87,7 @@
     <string name="announcement_creation_success_description">Votre annonce a été créé avec succès</string>
     <string name="announcement_creation_city_required">Vous devez sélectionner une ville</string>
     <string name="announcement_creation_category_required">Vous devez sélectionner une catégorie</string>
+    <string name="announcement_search_title">Rechercher</string>
 
     <!-- announcement details -->
     <string name="announcement_details_message_announcement_unsaved">Supprimé comme favoris</string>
@@ -93,9 +98,11 @@
 
     <!-- category -->
     <string name="category_list_title">Catégories</string>
+    <string name="category_choose_category_title">Choisir une catégorie</string>
 
     <!-- city -->
     <string name="city_list_title">Villes</string>
+    <string name="city_choose_city_title">Choisir une ville</string>
 
     <!-- image view content description text -->
     <string name="content_description_list_item_announcement_thumbnail">Image de l\'announcement</string>
